--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ body {
   font-size: 1em;
   background-color: hsl(185, 75%, 39%);
   margin: 0;
-  position: relative;
-  overflow: hidden;
+  background-image: url("images/bg-pattern-top.svg"), url("images/bg-pattern-bottom.svg");
+  background-position: top -50vh left -10vw, bottom -50vh right -10vw;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .component {
@@ -27,7 +29,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 15px;
-  margin: 30px;
+  margin: 1rem;
   border-radius: 10px;
   background-color: white;
 }
@@ -49,6 +51,15 @@ body {
   border: 3px solid white;
   border-radius: 50%;
   margin-bottom: -50px;
+  animation-name: grow-and-shrunk;
+  animation-timing-function: ease-in;
+  animation-duration: 1250ms;
+  animation-fill-mode: both;
+  animation-direction: alternate-reverse;
+  animation-iteration-count: infinite;
+}
+.component__images__profile:hover {
+  animation-play-state: paused;
 }
 .component__identity {
   width: 100%;
@@ -92,68 +103,16 @@ body {
   justify-content: center;
   align-items: center;
   gap: 5px;
+  transition: transform 300ms ease-out;
+}
+.component__footer > span:hover {
+  transform: scale(1.2);
 }
 .component__footer__label {
   color: hsl(0, 0%, 59%);
   font-size: 0.6em;
 }
 
-.circle {
-  border-radius: 50%;
-  position: absolute;
-  z-index: -1;
-}
-
-.top {
-  background: url("images/bg-pattern-top.svg") center/contain;
-}
-
-.bottom {
-  background: url("images/bg-pattern-bottom.svg") center/contain;
-}
-
-@media screen and (max-width: 768px) {
-  .circle {
-    width: 500px;
-    height: 500px;
-  }
-  .top {
-    top: -300px;
-    left: -300px;
-  }
-  .bottom {
-    bottom: -300px;
-    right: -300px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .circle {
-    width: 600px;
-    height: 600px;
-  }
-  .top {
-    top: -300px;
-    left: -200px;
-  }
-  .bottom {
-    bottom: -300px;
-    right: -200px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .circle {
-    width: 750px;
-    height: 750px;
-  }
-  .top {
-    top: -300px;
-    left: -200px;
-  }
-  .bottom {
-    bottom: -400px;
-    right: -150px;
-  }
-}
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -162,4 +121,11 @@ body {
   color: hsl(228, 45%, 44%);
 }
 
-/*# sourceMappingURL=style.css.map */
+@keyframes grow-and-shrunk {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.2);
+  }
+}/*# sourceMappingURL=style.css.map */
